--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,11 @@ project(CompilersPrinciplesExp C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(CompilersPrinciplesExp1 Exp1.c LexicalAnalysis.c)
-add_executable(CompilersPrinciplesExp2 Exp2.c include.h LexicalAnalysis.c)
+add_executable(CompilersPrinciplesExp2
+        Exp2.c
+        include.h
+        LexicalAnalysis.c
+        GrammarProcess.c
+        ActionTableGeneration.c
+        SyntaxAnalysis.c
+        )
